--- a/text/DP_pasovska.tex
+++ b/text/DP_pasovska.tex
@@ -853,16 +853,17 @@ popsat funkci - vytvoří hydrologicky korektní model, co vše vstupuje a co je
 
 \subsection{City Engine}
 
-\section{Publikování výsledků na internetu}
+\section{Publikování výsledků na internetuv}
 
 \section{Tvorba dílčích tematických map}
 
 
 \chapter{Prezentace na webových stránkách}
+I přes znalost značkovacího jazyka HTML byla webová stránka vytvářena online přes stránku Wix. Stránka Wix nabízí možnost bezplatného webhostingu, případně placené verze v případě, že uživatel nechce na svých webových stránkách zobrazit reklamy či chce využít nějakých prémiových služeb. Velkou výhodou tohoto webu je interaktivní tvorba, při níž uživatel pomocí 
 
 \section{Jazyk webových stránek}
 
-\section{Náležitosti webové stránka (možná spíše struktura ?)}
+\section{Náležitosti webové stránka}
 
 
 \chapter{Diskuze}
@@ -888,6 +889,7 @@ Závěr
 	\item[EPSG] European Petroleum Survey Group – databáze obsahující kódy zemských elipsoidů, geodetických dat, zeměpisných a kartografických souřadnicových systémů, měrných jednotek apod., každý souřadnicový systém má unikátní kód
 	\item[ESRI] Environmental Systems Research Institute - jeden z největších světových producentů software GIS
 	\item[GIS] Geografický informační systém
+	\item[HTML] Hypertext Markup Language
 	\item[JPG] Joint Photographic Experts Group
 	\item[SHP] Stavebně historický průzkum
 	\item[SÚRPMO] Státní ústav pro rekonstrukce památkových měst a objektů
